--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,10 @@ input[type="submit"] {
 }
 
 .btn {
-    align-items: center;
-    margin: 0px auto;
-    text-align: center;
-    display: block;
+  align-items: center;
+  margin: 0px auto;
+  text-align: center;
+  display: block;
 }
 
 input[type="submit"]:hover {
@@ -56,4 +56,8 @@ input[type="submit"]:hover {
 label {
   font-size: 20px;
   color: #fff;
+}
+div {
+  font-size: 20px;
+  color: red;
 }
